src/objects/Apttus_Config2__OrderSourceCustomFields__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__CustomFieldNames2__c</fullName>
        <description>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Custom Field Names 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomFieldNames3__c</fullName>
        <description>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Custom Field Names 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomFieldNames__c</fullName>
        <description>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Custom Field Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceObjectType__c</fullName>
        <description>The type of the source object to copy data from.

Valid values are the following

Proposal
Agreement
Order</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The type of the source object to copy data from.

Valid values are the following

Proposal
Agreement
Order</inlineHelpText>
        <label>Source Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>